<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tagline"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/orange_primary"
        android:indeterminateTintMode="src_atop"
        android:visibility="invisible" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginInputUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_centerVertical="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:endIconCheckable="true"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSend"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tagline"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/login_tagline"
        android:textSize="48sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginInputPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginInputUsername"
        android:layout_centerVertical="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:endIconCheckable="true"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEditPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/loginInputPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/orange_primary"
        android:text="@string/login"
        app:cornerRadius="4dp" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/forgot_password" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/register" />
</RelativeLayout>
