<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Register">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/logo" />


        <TextView
            android:id="@+id/tagline"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/register_tagline"
            android:textSize="48sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerInputEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tagline"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/email"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:endIconCheckable="true"
            app:endIconMode="clear_text"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEditEmail"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:imeOptions="actionSend" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerInputEmail"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/username"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"

            app:endIconCheckable="true"
            app:endIconMode="clear_text"
            app:hintAnimationEnabled="true"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEditUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionSend" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerUsername"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/password"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:endIconCheckable="true"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEditPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reenterPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerPassword"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/re_enter_password"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:endIconCheckable="true"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEditPassword2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reenterPassword"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/phone_number"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:endIconCheckable="true"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEditNumber"
                android:layout_width="match_parent"
                android:maxLength="10"
                android:layout_height="match_parent"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/inputNumber"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/orange_primary"
            android:text="@string/btnRegister"
            app:cornerRadius="4dp" />

        <TextView
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/login_link" />
    </RelativeLayout>

</ScrollView>
